脚本加载, 数据DataContainer

--- a/CodeTemplater/app.config
+++ b/CodeTemplater/app.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<configSections>
+		<section name="Script" type="Efreda.Script.ScriptSection,Efreda.Script"/>
+	</configSections>
+		
 	<connectionStrings>
 		<!-- Example connection to a SQL Server Database on localhost. -->
 		<!-- <add name="ExampleConnectionString"
@@ -13,7 +17,6 @@
 		<add key="Setting1" value="Very" />
 		<add key="Setting2" value="Easy" />
  	</appSettings>
-	<startup useLegacyV2RuntimeActivationPolicy="true">
-	<supportedRuntime version="v4.0"/>
-	</startup>
+	<startup useLegacyV2RuntimeActivationPolicy="true"><supportedRuntime version="v4.0"/></startup>
+	<Script StartEngine="True" RelativePath="True" ScriptPath="scripts" CreateGACMapping="False" CreateMappingAsyn="False"/>
 </configuration>
