--- a/CodeTemplater/CodeTemplater.csproj
+++ b/CodeTemplater/CodeTemplater.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataContainer.cs" />
     <Compile Include="MainForm.cs">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Compile>
