--- a/CodeTemplaterLib/CodeTemplaterLib.csproj
+++ b/CodeTemplaterLib/CodeTemplaterLib.csproj
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
   <PropertyGroup>
-    <ProjectGuid>{52F874FE-4758-4963-ADB1-B7D86CCBDE32}</ProjectGuid>
+    <ProjectGuid>{27047A97-FD88-40E3-971D-F49537097ACA}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>CodeTemplater</RootNamespace>
-    <AssemblyName>CodeTemplater</AssemblyName>
+    <OutputType>Library</OutputType>
+    <RootNamespace>CodeTemplaterLib</RootNamespace>
+    <AssemblyName>CodeTemplaterLib</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <AppDesignerFolder>Properties</AppDesignerFolder>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <OutputPath>bin\Debug\</OutputPath>
@@ -31,59 +31,35 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SqliteORM">
-      <HintPath>..\lib\SqliteORM\SqliteORM.dll</HintPath>
+    <Reference Include="Efreda.Script">
+      <HintPath>..\lib\Efreda.Script\Efreda.Script.dll</HintPath>
+    </Reference>
+    <Reference Include="NUnit.Framework">
+      <HintPath>$(SharpDevelopBinPath)\Tools\NUnit\NUnit.Framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainForm.cs">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Model\Script.cs" />
-    <Compile Include="Model\SimpleTable.cs" />
-    <Compile Include="Model\TableBase.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="DataContainer.cs" />
+    <Compile Include="DataParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TemplateParser.cs" />
+    <Compile Include="UnitTest\TemplateParserTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
+    <Folder Include="UnitTest" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
-    <None Include="appdata.db3">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <None Include="app.config">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
-    <None Include="CodeTemplater.exe.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CodeTemplaterLib\CodeTemplaterLib.csproj">
-      <Project>{27047A97-FD88-40E3-971D-F49537097ACA}</Project>
-      <Name>CodeTemplaterLib</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
